--- a/layout.html
+++ b/layout.html
@@ -24,115 +24,115 @@
                 <div class="o-layout__item">
                     <p class="c-layout-block c-layout-block--ellipsis">default: 100%</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-2-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-2-of-3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-3-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-3-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-2-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-2-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-3-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-3-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-4-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-4-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-3-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-3-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-5">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-5</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-6">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-6</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3</p>
                 </div>
             </div>
@@ -142,31 +142,31 @@
         <div class="o-container">
             <h2>Layout items combined with responsive width utilities</h2>
             <div class="o-layout o-layout--gutter">
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp1">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp1</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp1">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp1</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-3-bp3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-3-bp3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-3-bp3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-3-bp3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3-bp3">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-3-bp3</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-4-bp4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-4-bp4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-4-bp4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-4-bp4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-4-bp4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-4-bp4</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-2-bp2 u-1-of-4-bp4">
                     <p class="c-layout-block c-layout-block--ellipsis">u-1-of-2-bp2 + u-1-of-4-bp4</p>
                 </div>
             </div>
@@ -175,7 +175,7 @@
     <section class="o-row o-row--l">
         <div class="o-container">
             <h2>Layout justification modifiers</h2>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-start">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">Default justification is from the start</p>
                 </div>
@@ -186,7 +186,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">Default justification is from the start</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-end">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">We are justified to the end</p>
                 </div>
@@ -197,7 +197,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">We are justified to the end</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-center">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">We are justified to the center</p>
                 </div>
@@ -208,7 +208,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">We are justified to the center</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-space-evenly">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">We have equal space between us</p>
                 </div>
@@ -219,7 +219,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">We have equal space between us</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-space-around">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">We have equal space on both sides</p>
                 </div>
@@ -230,7 +230,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">We have equal space on both sides</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--justify-space-between">
                 <div class="o-layout__item u-1-of-4-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">We don't </p>
                 </div>
@@ -254,7 +254,7 @@
                     <p class="c-layout-block c-layout-block--ellipsis">I'm <strong>second</strong> in order</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--row-reverse">
                 <div class="o-layout__item u-1-of-2-bp2">
                     <p class="c-layout-block c-layout-block--ellipsis">I'm <strong>first</strong> in order</p>
                 </div>
@@ -267,7 +267,7 @@
     <section class="o-row o-row--l">
         <div class="o-container">
             <h2>Layout alignment modifiers</h2>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--align-start">
                 <div class="o-layout__item u-1-of-2-bp2">
                     <p class="c-layout-block">Default alignment is from to te start.</p>
                 </div>
@@ -284,7 +284,7 @@
                         culpa.</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--align-end">
                 <div class="o-layout__item u-1-of-2-bp2">
                     <p class="c-layout-block">We are aligned to te end.</p>
                 </div>
@@ -301,7 +301,7 @@
                         culpa.</p>
                 </div>
             </div>
-            <div class="o-layout o-layout--gutter">
+            <div class="o-layout o-layout--gutter o-layout--align-center">
                 <div class="o-layout__item u-1-of-2-bp2">
                     <p class="c-layout-block">We are aligned to te center.</p>
                 </div>
@@ -324,13 +324,13 @@
         <div class="o-container">
             <h2>Layout items with flex-basis: auto</h2>
             <div class="o-layout o-layout--gutter">
-                <div class="o-layout__item">
+                <div class="o-layout__item u-flex-basis-auto">
                     <p class="c-layout-block">u-flex-basis-auto</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-flex-basis-auto">
                     <p class="c-layout-block">u-flex-basis-auto with some more text</p>
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-flex-basis-auto">
                     <p class="c-layout-block">u-flex-basis-auto with even more text to demonstrate what it does</p>
                 </div>
             </div>
@@ -344,13 +344,13 @@
         </header>
         <article class="o-row o-row--l">
             <div class="o-container">
-                <div class="o-layout">
-                    <div class="o-layout__item">
+                <div class="o-layout o-layout--align-center o-layout--justify-space-around">
+                    <div class="o-layout__item u-1-of-3-bp2">
                         <figure>
                             <img src="img/yawning-cat-square.jpg" alt="This is a picture of a yawning cat">
                         </figure>
                     </div>
-                    <div class="o-layout__item">
+                    <div class="o-layout__item u-1-of-3-bp2">
                         <h3>I'm second in order</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem
@@ -363,13 +363,13 @@
         </article>
         <article class="o-row o-row--l">
             <div class="o-container">
-                <div class="o-layout">
-                    <div class="o-layout__item">
+                <div class="o-layout o-layout--row-reverse o-layout--align-center o-layout--justify-space-around">
+                    <div class="o-layout__item u-1-of-3-bp2">
                         <figure>
                             <img src="img/yawning-cat-square.jpg" alt="This is a picture of a yawning cat">
                         </figure>
                     </div>
-                    <div class="o-layout__item">
+                    <div class="o-layout__item u-1-of-3-bp2">
                         <h3>I'm second in order</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem
