oef katten klaar

--- a/layout.html
+++ b/layout.html
@@ -384,8 +384,8 @@
     <section class="o-row o-row--l">
         <div class="o-container">
             <h2>Example 2</h2>
-            <div class="o-layout">
-                <article class="o-layout__item">
+            <div class="o-layout o-layout--justify-space-around o-layout--gutter">
+                <article class="o-layout__item u-1-of-3-bp2">
                     <figure>
                         <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
                     </figure>
@@ -396,7 +396,7 @@
                         sunt minus mollitia libero.
                     </p>
                 </article>
-                <article class="o-layout__item">
+                <article class="o-layout__item u-1-of-3-bp2">
                     <figure>
                         <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
                     </figure>
@@ -407,7 +407,7 @@
                         sunt minus mollitia libero.
                     </p>
                 </article>
-                <article class="o-layout__item">
+                <article class="o-layout__item u-1-of-3-bp2">
                     <figure>
                         <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
                     </figure>
@@ -425,12 +425,11 @@
 
         <div class="o-container">
             <h2>Example 3</h2>
-            <figure class="o-layout">
-
-                <div class="o-layout__item">
+            <figure class="o-layout o-layout--align-end o-layout--gutter">
+                <div class="o-layout__item u-2-of-3-bp2">
                     <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
                 </div>
-                <div class="o-layout__item">
+                <div class="o-layout__item u-1-of-3-bp2">
                     <figcaption class="u-max-width-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Neque officiis laudantium rem error qui, tempora natus reiciendis sed iste asperiores,
                         accusamus optio facere a, unde nam, sunt minus mollitia libero.</figcaption>
